# nika

./: .gitignore  404.html  docker-compose.yml  index.html  mkdocs.yml  nika.ini
CONTRIBUTING/: index.html
agents/alternativeMessageTopicClassificationAgent/: index.html
agents/alternativeMessageTopicClassificationAgent.ru/: index.html
agents/weatherAgent/: index.html
changelog/: index.html
docs/: index.md  index.ru.md
index.ru/: index.html
interface/: .env  README.md  package-lock.json  package.json
license/: index.html
problem-solver/: Makefile  cmake_install.cmake
problem-solver/cxx/message-classification-module/: CMakeLists.txt  Makefile  cmake_install.cmake
problem-solver/cxx/message-classification-module/agent/: AlternativeMessageTopicClassificationAgent.cpp  RasaMessageTopicClassificationAgent.cpp  RasaMessageTopicClassificationAgent.hpp  WitMessageTopicClassificationAgent.cpp  WitMessageTopicClassificationAgent.hpp
problem-solver/cxx/message-classification-module/classifier/: RasaMessageTopicClassifier.cpp  RasaMessageTopicClassifier.hpp  WitMessageTopicClassifier.cpp  WitMessageTopicClassifier.hpp
problem-solver/cxx/message-classification-module/client/: ClientInterface.hpp  WitAiClient.cpp  WitAiClient.hpp
problem-solver/cxx/message-classification-module/constants/: RasaMessageClassificationConstants.cpp  RasaMessageClassificationConstants.hpp  WitMessageClassificationConstants.cpp
problem-solver/cxx/message-classification-module/helper/: MessageClassificationHelper.cpp  MessageClassificationHelper.hpp
problem-solver/cxx/message-classification-module/keynodes/: MessageClassificationKeynodes.hpp
problem-solver/cxx/message-classification-module/manager/: RasaMessageTopicClassificationManager.cpp  RasaMessageTopicClassificationManager.hpp  WitMessageTopicClassificationManager.cpp  WitMessageTopicClassificationManager.hpp
problem-solver/cxx/message-classification-module/rasa_classifier_model/: .dockerignore  Dockerfile.server  Dockerfile.test  Dockerfile.train  config.yml  docker-compose.yml  domain.yml
problem-solver/cxx/message-classification-module/rasa_classifier_model/actions/: actions.py
problem-solver/cxx/message-classification-module/rasa_classifier_model/components/: __init__.py  intent_validator.py  replacement_component.py  text_sanitizer.py
problem-solver/cxx/message-classification-module/rasa_classifier_model/data/: nlu.yml  replacements.yml
quick_start/: index.html
quick_start.ru/: index.html
scripts/: healthcheck.py
thirdparty.ru/: index.html
(+250 files in other folders)
